// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card accepts className override 1`] = `
<View
  className="bg-white rounded-lg p-4 shadow-sm border border-gray-100 bg-blue-50"
>
  <Text>
    Custom
  </Text>
</View>
`;

exports[`Card renders children with default styling 1`] = `
<View
  className="bg-white rounded-lg p-4 shadow-sm border border-gray-100 "
>
  <Text>
    Hello
  </Text>
</View>
`;
